Testing Nav Contact page on mobile is fine, but the work and home pages have a margin coming from somewhere. Removing all components except nav to test again on physical device to find the issue

--- a/src/Components/Collections/Contact/ContactBody.module.css
+++ b/src/Components/Collections/Contact/ContactBody.module.css
@@ -147,14 +147,13 @@
         justify-content: center;
         align-items: center;
         gap: 24px;
-       
     }
 
     .contactMessgageInputField {
         display: flex;
         height: 100px;
         width: 100%;
-        max-width: 352px;
+        max-width: 360px;
         color: #000000;
         font-family: "Verdana";
         font-size: 15px;
@@ -172,7 +171,7 @@
     }
 
     .contactMessageSeperator {
-        width: 343px;
+        width: 360px;
         height: 1px;
         background: #111;
         margin-top: -20px;
